--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ isort = "^5.13.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+ignore_missing_imports = true
