--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ pylint = "^3.1.0"
 mypy = "^1.8.0"
 black = "^24.2.0"
 isort = "^5.13.2"
+kafka-python = "^2.0.2"
+pytest-docker = "^3.1.1"
+pytest = "^8.0.2"
+pytest-asyncio = "^0.23.5"
 
 [build-system]
 requires = ["poetry-core"]
