--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ kafka-python = "^2.0.2"
 pytest-docker = "^3.1.1"
 pytest = "^8.0.2"
 pytest-asyncio = "^0.23.5"
+pylint-pytest = "^1.1.7"
 
 [build-system]
 requires = ["poetry-core"]
