--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ mypy = "^1.8.0"
 black = "^24.2.0"
 isort = "^5.13.2"
 kafka-python = "^2.0.2"
-pytest-docker = "^3.1.1"
 pytest = "^8.0.2"
 pytest-asyncio = "^0.23.5"
 pylint-pytest = "^1.1.7"
+testcontainers = "^4.8.1"
 
 [build-system]
 requires = ["poetry-core"]
