add deployment stopper for rennovate branches

--- a/.tekton/pipelineRun_pvc_template.yaml
+++ b/.tekton/pipelineRun_pvc_template.yaml
@@ -40,6 +40,8 @@ spec:
     value: {{target_branch}}
   - name: source-branch
     value: {{source_branch}}
+  - name: abort-deployment-branch-pattern
+    value: ^rennovate
   workspaces:
   - name: ssh-creds
     secret:
